--- a/Momon.Biju.Web/Views/Product/Index.cshtml
+++ b/Momon.Biju.Web/Views/Product/Index.cshtml
@@ -8,6 +8,7 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/css/product.css" />
+    <link rel="stylesheet" href="~/css/x-paged-list.css" />
 }
 
 <div class="row">
