--- a/Momon.Biju.Web/Views/Shared/Components/FilterProducts/Default.cshtml
+++ b/Momon.Biju.Web/Views/Shared/Components/FilterProducts/Default.cshtml
@@ -26,7 +26,7 @@ else
 {
     <!-- Card (desktop only) -->
     <div class="card p-3">
-        <h5>Filtrar Produtos</h5>
+        <h5 class="fw-bold">Filtrar Produtos</h5>
         @await Html.PartialAsync("Components/FilterProducts/_FilterForm", Model)
     </div>
 }
