--- a/Momon.Biju.Web/Areas/Cart/Views/Cart/_CartItemsList.cshtml
+++ b/Momon.Biju.Web/Areas/Cart/Views/Cart/_CartItemsList.cshtml
@@ -6,14 +6,14 @@
         <i class="fa-solid fa-cart-shopping me-2"></i> Seu carrinho está vazio.
     </div>
     
-    <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary">
-        <i class="bi bi-arrow-left-circle"></i> Continuar comprando
+    <a asp-area="" asp-controller="Product" asp-action="Index" class="btn btn-outline-custom">
+        <i class="bi bi-arrow-left-circle"></i> Voltar a loja
     </a>
 }
 else
 {
     <div class="table-responsive mb-3">
-        <table class="table table-striped table-hover align-middle">
+        <table class="table table-striped table-hover align-middle table-pink">
             <thead class="table-dark">
                 <tr>
                     <th scope="col">Produto</th>
