--- a/Momon.Biju.Web/Views/Shared/Components/FilterProducts/_FilterForm.cshtml
+++ b/Momon.Biju.Web/Views/Shared/Components/FilterProducts/_FilterForm.cshtml
@@ -20,5 +20,5 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Filtrar</button>
+    <button type="submit" class="btn mt-3 btn-submit">Filtrar</button>
 </form>
