--- a/Momon.Biju.Web/Views/Shared/_Layout.cshtml
+++ b/Momon.Biju.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 <header id="header" class="header d-flex sticky-top">
     <div class="container-fluid container-xl d-flex justify-content-between align-items-center flex-nowrap">
 
-        <a asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center">
+        <a asp-area="" asp-controller="Home" asp-action="Index" class="logo d-flex align-items-center">
             <img src="~/images/logo/logo-removebg.png" alt="" class="me-2" style="height:40px;">
             <h1 class="sitename m-0">Momon Bijus</h1>
         </a>
@@ -96,8 +96,8 @@
     </div>
 </header>
 
-<div class="container mt-4">
-    <main role="main" class="pb-3 flex-grow-1">
+<div class="container mt-4 page-wrapper light-background">
+    <main role="main" class="pb-3 content">
         @RenderBody()
     </main>
 </div>
