--- a/Momon.Biju.Web/wwwroot/css/home/footer.css
+++ b/Momon.Biju.Web/wwwroot/css/home/footer.css
@@ -6,6 +6,7 @@
     background-color: var(--background-color);
     font-size: 14px;
     position: relative;
+    margin-top: auto;    /* new line → pushes footer down */
 }
 
 .footer .footer-top {
@@ -27,13 +28,13 @@
     font-size: 26px;
     font-weight: 700;
     letter-spacing: 1px;
-    font-family: var(--heading-font);
+    font-family: var(--heading-font), serif;
     color: var(--heading-color);
 }
 
 .footer .footer-about p {
     font-size: 14px;
-    font-family: var(--nav-font);
+    font-family: var(--nav-font), serif;
 }
 
 .footer .social-links a {
